--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // ViewModel
+    implementation "androidx.activity:activity-ktx:1.5.0"
+    implementation "androidx.fragment:fragment-ktx:1.5.0"
+
     // HTTP通信 retrofit
     implementation 'com.squareup.retrofit2:retrofit:(insert latest version)'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
